[gd_scene load_steps=10 format=4 uid="uid://d3oj0xqj6ji1c"]

[ext_resource type="Script" uid="uid://bwacwh6hdhagj" path="res://script/shanny's_minigame_selection.gd" id="1_pblcd"]
[ext_resource type="Texture2D" uid="uid://bheejfcror6km" path="res://assets/sprites/sprites/paka's petting sim/ground.png" id="2_532vj"]
[ext_resource type="Texture2D" uid="uid://bqohug3lat2j" path="res://assets/sprites/sprites/BUTTONS/Siamese Cat display.png" id="3_g2kx4"]
[ext_resource type="Texture2D" uid="uid://dl8fs7d20bvl" path="res://assets/sprites/sprites/BUTTONS/Go_Back.png" id="4_qwu20"]
[ext_resource type="Texture2D" uid="uid://boqv7aiafy7od" path="res://assets/sprites/sprites/BUTTONS/Go_Back_hover.png" id="5_0neaq"]
[ext_resource type="Script" uid="uid://3inedt7vwkw7" path="res://script/camera_2d.gd" id="6_71j2l"]
[ext_resource type="PackedScene" uid="uid://b83hwoltxpxrq" path="res://scenes/fade_transition.tscn" id="7_ebdoy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l4tew"]
texture = ExtResource("2_532vj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_c3qqt"]
sources/0 = SubResource("TileSetAtlasSource_l4tew")

[node name="Shanny\'s minigame selection" type="Node2D"]
script = ExtResource("1_pblcd")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD7//7/AAAFAAAAAAD7////AAAFAAEAAAD7/wAAAAAFAAEAAAD7/wEAAAAFAAIAAAD8//7/AAAFAAAAAAD8////AAAFAAEAAAD8/wAAAAAFAAEAAAD8/wEAAAAFAAIAAAD9//7/AAAFAAAAAAD9////AAAFAAEAAAD9/wAAAAAFAAEAAAD9/wEAAAAFAAIAAAD+//7/AAAFAAAAAAD+////AAAFAAEAAAD+/wAAAAAFAAEAAAD+/wEAAAAFAAIAAAD///7/AAAFAAAAAAD/////AAAFAAEAAAD//wAAAAAFAAEAAAD//wEAAAAFAAIAAAAAAP7/AAAFAAAAAAAAAP//AAAFAAEAAAAAAAAAAAAFAAEAAAAAAAEAAAAFAAIAAAABAP7/AAAFAAAAAAABAP//AAAFAAEAAAABAAAAAAAFAAEAAAABAAEAAAAFAAIAAAACAP7/AAAFAAAAAAACAP//AAAFAAEAAAACAAAAAAAFAAEAAAACAAEAAAAFAAIAAAADAP7/AAAFAAAAAAADAP//AAAFAAEAAAADAAAAAAAFAAEAAAADAAEAAAAFAAIAAAAEAP7/AAAFAAAAAAAEAP//AAAFAAEAAAAEAAAAAAAFAAEAAAAEAAEAAAAFAAIAAAD7/wIAAAAFAAMAAAD8/wIAAAAFAAMAAAD9/wIAAAAFAAMAAAD+/wIAAAAFAAMAAAD//wIAAAAFAAMAAAAAAAIAAAAFAAMAAAABAAIAAAAFAAMAAAACAAIAAAAFAAMAAAADAAIAAAAFAAMAAAAEAAIAAAAFAAMAAAD5//r/AAAEAAAAAAD5//v/AAAEAAAAAAD5//z/AAAEAAAAAAD5//3/AAAEAAAAAAD6//r/AAAEAAAAAAD6//v/AAAEAAAAAAD6//z/AAAEAAAAAAD6//3/AAAEAAAAAAD7//r/AAAEAAAAAAD7//v/AAAEAAAAAAD7//z/AAAEAAAAAAD7//3/AAAEAAAAAAD8//r/AAAEAAAAAAD8//v/AAAEAAAAAAD8//z/AAAEAAAAAAD8//3/AAAEAAAAAAD9//r/AAAEAAAAAAD9//v/AAAEAAAAAAD9//z/AAAEAAAAAAD9//3/AAAEAAAAAAD+//r/AAAEAAAAAAD+//v/AAAEAAAAAAD+//z/AAAEAAAAAAD+//3/AAAEAAAAAAD///r/AAAEAAAAAAD///v/AAAEAAAAAAD///z/AAAEAAAAAAD///3/AAAEAAAAAAAAAPr/AAAEAAAAAAAAAPv/AAAEAAAAAAAAAPz/AAAEAAAAAAAAAP3/AAAEAAAAAAABAPr/AAAEAAAAAAABAPv/AAAEAAAAAAABAPz/AAAEAAAAAAABAP3/AAAEAAAAAAACAPr/AAAEAAAAAAACAPv/AAAEAAAAAAACAPz/AAAEAAAAAAACAP3/AAAEAAAAAAADAPr/AAAEAAAAAAADAPv/AAAEAAAAAAADAPz/AAAEAAAAAAADAP3/AAAEAAAAAAAEAPr/AAAEAAAAAAAEAPv/AAAEAAAAAAAEAPz/AAAEAAAAAAAEAP3/AAAEAAAAAAAFAPr/AAAEAAAAAAAFAPv/AAAEAAAAAAAFAPz/AAAEAAAAAAAFAP3/AAAEAAAAAAAGAPr/AAAEAAAAAAAGAPv/AAAEAAAAAAAGAPz/AAAEAAAAAAAGAP3/AAAEAAAAAAAHAPr/AAAEAAAAAAAHAPv/AAAEAAAAAAAHAPz/AAAEAAAAAAAHAP3/AAAEAAAAAAAIAPr/AAAEAAAAAAAIAPv/AAAEAAAAAAAIAPz/AAAEAAAAAAAIAP3/AAAEAAAAAAD3//n/AAAEAAAAAAD3//r/AAAEAAAAAAD3//v/AAAEAAAAAAD3//z/AAAEAAAAAAD3//3/AAAEAAAAAAD4//n/AAAEAAAAAAD4//r/AAAEAAAAAAD4//v/AAAEAAAAAAD4//z/AAAEAAAAAAD4//3/AAAEAAAAAAD5//n/AAAEAAAAAAD3//7/AAAFAAAAAAD4//7/AAAFAAAAAAD5//7/AAAFAAAAAAD6//7/AAAFAAAAAAAFAP7/AAAFAAAAAAAGAP7/AAAFAAAAAAAHAP7/AAAFAAAAAAAIAP7/AAAFAAAAAAD3////AAAFAAEAAAD3/wAAAAAFAAEAAAD3/wEAAAAFAAIAAAD4////AAAFAAEAAAD4/wAAAAAFAAEAAAD4/wEAAAAFAAIAAAD5////AAAFAAEAAAD5/wAAAAAFAAEAAAD5/wEAAAAFAAIAAAD6////AAAFAAEAAAD6/wAAAAAFAAEAAAD6/wEAAAAFAAIAAAAFAP//AAAFAAEAAAAFAAAAAAAFAAEAAAAFAAEAAAAFAAIAAAAGAP//AAAFAAEAAAAGAAAAAAAFAAEAAAAGAAEAAAAFAAIAAAAHAP//AAAFAAEAAAAHAAAAAAAFAAEAAAAHAAEAAAAFAAIAAAAIAP//AAAFAAEAAAAIAAAAAAAFAAEAAAAIAAEAAAAFAAIAAAD3/wIAAAAFAAMAAAD3/wMAAAAFAAMAAAD3/wQAAAAFAAMAAAD4/wIAAAAFAAMAAAD4/wMAAAAFAAMAAAD4/wQAAAAFAAMAAAD5/wIAAAAFAAMAAAD5/wMAAAAFAAMAAAD5/wQAAAAFAAMAAAD6/wIAAAAFAAMAAAD6/wMAAAAFAAMAAAD6/wQAAAAFAAMAAAD7/wMAAAAFAAMAAAD7/wQAAAAFAAMAAAD8/wMAAAAFAAMAAAD8/wQAAAAFAAMAAAD9/wMAAAAFAAMAAAD9/wQAAAAFAAMAAAD+/wMAAAAFAAMAAAD+/wQAAAAFAAMAAAD//wMAAAAFAAMAAAD//wQAAAAFAAMAAAAAAAMAAAAFAAMAAAAAAAQAAAAFAAMAAAABAAMAAAAFAAMAAAABAAQAAAAFAAMAAAACAAMAAAAFAAMAAAACAAQAAAAFAAMAAAADAAMAAAAFAAMAAAADAAQAAAAFAAMAAAAEAAMAAAAFAAMAAAAEAAQAAAAFAAMAAAAFAAIAAAAFAAMAAAAFAAMAAAAFAAMAAAAFAAQAAAAFAAMAAAAGAAIAAAAFAAMAAAAGAAMAAAAFAAMAAAAGAAQAAAAFAAMAAAAHAAIAAAAFAAMAAAAHAAMAAAAFAAMAAAAHAAQAAAAFAAMAAAAIAAIAAAAFAAMAAAAIAAMAAAAFAAMAAAAIAAQAAAAFAAMAAAA=")
tile_set = SubResource("TileSet_c3qqt")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-27, 0)
texture = ExtResource("3_g2kx4")

[node name="Buttons" type="Node2D" parent="."]

[node name="GoBack" type="TextureButton" parent="Buttons"]
offset_left = -1.0
offset_top = 7.0
offset_right = 63.0
offset_bottom = 23.0
texture_normal = ExtResource("4_qwu20")
texture_hover = ExtResource("5_0neaq")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(9, 9)
limit_left = -77
limit_top = -44
limit_right = 77
limit_bottom = 44
script = ExtResource("6_71j2l")

[node name="fade_transition" parent="." instance=ExtResource("7_ebdoy")]

[node name="FadeTimer" type="Timer" parent="fade_transition"]

[connection signal="pressed" from="Buttons/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="timeout" from="fade_transition/FadeTimer" to="." method="_on_fade_timer_timeout"]
